[project]
name = "nerfst"
version = "0.1.3"

dependencies = [
    "nerfstudio"
]

[tool.setuptools.packages.find]
include = ["nerfst*"]

[project.entry-points.'nerfstudio.method_configs']
nerfst = 'nerfst.nerfst_config:nerfst_method'
arfst = 'nerfst.nerfst_config:arf_method'
tensorfst = 'nerfst.nerfst_config:arf_tensorf_method'